force-app/main/default/objects/S3_File__c/S3_File__c.object-meta.xml
<CustomObject>
    <label>S3 File</label>
    <nameField>
        <label>S3 File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S3 Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>