force-app/main/default/objects/S3_File__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>S3 Files</relationshipLabel>
    <relationshipName>S3_Files</relationshipName>
    <type>Lookup</type>
</CustomField>