force-app/main/default/objects/S3_File__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>S3 Files</relationshipLabel>
    <relationshipName>S3_Files</relationshipName>
    <type>Lookup</type>
</CustomField>