force-app/main/default/objects/S3_File__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>S3 Files</relationshipLabel>
    <relationshipName>S3_Files</relationshipName>
    <type>Lookup</type>
</CustomField>