force-app/main/default/objects/S3_File__c/fields/Content_Modified__c.field-meta.xml
<CustomField>
    <fullName>Content_Modified__c</fullName>
    <label>Content Modified</label>
    <type>DateTime</type>
</CustomField>