force-app/main/default/objects/S3_File__c/fields/Content_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_ID__c</fullName>
    <externalId>true</externalId>
    <label>Content Version ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>