force-app/main/default/objects/S3_File__c/fields/Creation_Year__c.field-meta.xml
<CustomField>
    <fullName>Creation_Year__c</fullName>
    <label>Creation Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>