force-app/main/default/objects/S3_File__c/fields/Last_Synched__c.field-meta.xml
<CustomField>
    <fullName>Last_Synched__c</fullName>
    <label>Last Synched</label>
    <type>DateTime</type>
</CustomField>