force-app/main/default/objects/S3_File__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>S3 Files</relationshipLabel>
    <relationshipName>S3_Files</relationshipName>
    <type>Lookup</type>
</CustomField>