force-app/main/default/objects/S3_File__c/fields/S3_Key__c.field-meta.xml
<CustomField>
    <fullName>S3_Key__c</fullName>
    <label>S3 Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>