force-app/main/default/objects/S3_File__c/validationRules/One_Parent_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>One_Parent_Only</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISBLANK(Account__c), 1, 0) +
IF(ISBLANK(Opportunity__c), 1, 0) +
IF(ISBLANK(Contact__c), 1, 0)
&lt;&gt; 2</errorConditionFormula>
    <errorMessage>Please fill only one, Account, Opportunity or Contact</errorMessage>
</ValidationRule>